welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:25: error: not found: value liMessage
											else { if (liMessage() == "F")
                                                                                                   ^